--- a/SimpleGraph.Tests/SimpleGraph.Tests.csproj
+++ b/SimpleGraph.Tests/SimpleGraph.Tests.csproj
@@ -28,22 +28,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SimpleGraph.csproj">
+    <ProjectReference Include="..\SimpleGraph\SimpleGraph.csproj">
       <Project>{2D9CFEB9-AEE2-4BE9-8CD2-2FF7A6945875}</Project>
       <Name>SimpleGraph</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
